--- a/SpringbootCodeTemplate/src/main/resources/static/index.html
+++ b/SpringbootCodeTemplate/src/main/resources/static/index.html
@@ -10,7 +10,8 @@
 </style>
 </head>
 <body>
-	<h2>晓风轻代码模板（请在chrome测试）</h2>
+	<h3>晓风轻代码模板（请在chrome测试）</h3>
+	<a href="swagger-ui.html">swagger-ui</a> 如需登陆，请使用xwjie/xwjie登陆。
 	<div id="userinfo"></div>
 	<hr />
 	<form id="formLogin" action="login" method="post">
