--- a/SpringbootCodeTemplate/src/main/resources/static/index.html
+++ b/SpringbootCodeTemplate/src/main/resources/static/index.html
@@ -10,8 +10,10 @@
 </style>
 </head>
 <body>
-	<h3>晓风轻代码模板（请在chrome测试）</h3>
-	<a href="swagger-ui.html">swagger-ui</a> 如需登陆，请使用xwjie/xwjie登陆。
+	<h3>晓风轻代码模板（请在chrome测试）<a href="https://github.com/xwjie/ElementVueSpringbootCodeTemplate">github</a></h3>
+	<h4><a href="swagger-ui.html">swagger-ui 接口</a> 如需登陆，请使用xwjie/xwjie登陆。</h4>
+	<h4><a href="cache.html">cache 查看页面</a></h4>
+	
 	<div id="userinfo"></div>
 	<hr />
 	<form id="formLogin" action="login" method="post">
