--- a/JavaSource/src/main/resources/static/index.html
+++ b/JavaSource/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
     <li>
         <a href="https://xwjie.github.io/ElementVueSpringbootCodeTemplate/">文档说明</a>
     </li>
+
 </ul>
 <h2>用户</h2>
 管理员：xwjie，普通用户：user1~user10，密码默认都是 123456
@@ -34,6 +35,9 @@
     </li>
     <li>
         <a href="h2-console/">内置h2数据库（URL： jdbc:h2:~/mydb.h2，用户名/密码：sa）</a>
+    </li>
+    <li>
+        <a href="druid/">Druid</a>
     </li>
 </ul>
 </body>
